# _rust_rest_api_

./: .env  .gitignore  Cargo.toml  README.md  get_lines.py  package-lock.json  package.json  populate.py
migrations/2023-03-09-210854_bikes/: down.sql  up.sql
migrations/2023-03-09-210858_helmets/: down.sql  up.sql
migrations/2023-03-09-210903_riders/: down.sql  up.sql
migrations/2023-03-14-140934_events/: down.sql  up.sql
migrations/2023-03-14-145627_eventrider/: down.sql  up.sql
src/: db.rs  handler.rs  handlers.rs  load_script.rs  main.rs  model.rs  response.rs  schema.rs
src/handlers/: bikehandler.rs  eventhandler.rs  eventriderhandler.rs  helmhandler.rs  indexhandler.rs  riderhandler.rs
