[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", default-features = false, features = ["postgres", "chrono"] }
#diesel_cli = { version = "1.4.1", default-features = false, features = ["postgres"] }
dotenv = "0.15.0"
#libpq = "3.0.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }

# rocket - web framework
# chrono - date and time
# serde - serialization
# uuid - unique id