[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", default-features = false, features = ["postgres", "chrono"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = {version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }
schemars = { version = "0.8", features = ["chrono"] }

# rocket - web framework
# chrono - date and time
# serde - serialization
# uuid - unique id